[tool.poetry]
name = "dramakul"
version = "0.1.0"
description = "Watch and download dramas from Dramacool sites"
authors = ["Aaron Gonzales <aaroncgonzales.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
dramakul = "dramakul.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
PySimpleGUI = "^4.34.0"
typer = {extras = ["all"], version = "^0.3.2"}
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pyinstaller = "^4.2"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
